Fix organogram vertical alignment

--- a/modules/features/dgu_organogram/css/organogram.css
+++ b/modules/features/dgu_organogram/css/organogram.css
@@ -111,6 +111,11 @@ form#ckan-publisher-form #edit-submit,  form#ckan-publisher-form #edit-cancel {
     margin: 0 auto;
 }
 
+.field-name-field-organogram .table tbody>tr>td {
+    vertical-align: middle;
+}
+
+
 .field-name-field-organogram fieldset {
     border: none;
     box-shadow: none;
